# Ruins

./: .gitignore  LICENCE  Readme.md  default.nix  release.nix  ruins.cabal  ruins.nix  shell.nix
assets/: ruins-rects.json
assets/animations/: frisk.json  froggit.json  napstablook.json
assets/rooms/: debug-room.json  debug.json  home-corridor.json  home-entrance.json
assets/scripts/: debug.script
nix/: aeson-tiled.nix
src/: Main.hs
src/Ruins/: Apecs.hs  Audio.hs  Components.hs  Draw.hs  EventHandler.hs  Keys.hs  Miscellaneous.hs  Resources.hs  SDL.hs  Script.hs  Step.hs
src/Ruins/Components/: Characters.hs  Script.hs  Spawn.hs  Sprites.hs  World.hs
src/Ruins/Extra/: Apecs.hs  GL.hs  SDL.hs
