cabal-version:         2.4

name:                  ruins
version:               0.1.0.0
-- synopsis:
-- description:
homepage:              https://github.com/Radicalautistt/Ruins
bug-reports:           https://github.com/Radicalautistt/Ruins/issues
license:               NONE
license-file:          LICENSE
author:                Radical autist
maintainer:            56npyfygybys@gmail.com
tested-with:           GHC == 8.4.4
-- copyright:
category:              Game

executable ruins
  main-is:             Main.hs

  other-modules:       Paths_ruins
                       Ruins.SDL
                       Ruins.Apecs
                       Ruins.Step
                       Ruins.Resources
                       Ruins.Components
                       Ruins.EventHandler

  build-depends:       base ^>=4.13.0.0
                     , lens
                     , mtl
                     , transformers
                     , async
                     , managed
                     , text
                     , filepath
                     , directory
                     , apecs
                     , apecs-physics
                     , linear
                     , sdl2
                     , sdl2-ttf
                     , sdl2-mixer
                     , template-haskell
                     , hashable
                     , unordered-containers

  default-extensions:  TypeApplications
                       ApplicativeDo
                       TypeFamilies
                       BangPatterns
                       StrictData
                       PackageImports
                       LambdaCase
                       DataKinds
                       PatternSynonyms
                       BlockArguments
                       RecordWildCards
                       OverloadedStrings
                       DerivingVia
                       DerivingStrategies
                       DeriveGeneric
                       DeriveFoldable
                       DeriveFunctor
                       DeriveTraversable
                       OverloadedLabels
                       GeneralizedNewtypeDeriving
                       ScopedTypeVariables

  ghc-options:         -Wall -O2 -threaded -with-rtsopts=-N

  hs-source-dirs:      src
  default-language:    Haskell2010
