cabal-version:         2.4

name:                  ruins
version:               0.1.0.0
description:           A Haskell remake of the RUINS section from Undertale.
homepage:              https://github.com/Radicalautistt/Ruins
bug-reports:           https://github.com/Radicalautistt/Ruins/issues
license:               NONE
license-file:          LICENSE
author:                Radical autist
maintainer:            56npyfygybys@gmail.com
tested-with:           GHC == 8.4.4
-- copyright:
category:              Game

executable ruins
  main-is:             Main.hs

  other-modules:       Paths_ruins
                       Ruins.Draw
                       Ruins.Step
                       Ruins.Script
                       Ruins.Resources
                       Ruins.EventHandler
                       Ruins.Miscellaneous

                       Ruins.Extra.SDL
                       Ruins.Extra.Apecs

                       Ruins.Components.World
                       Ruins.Components.Sprites
                       Ruins.Components.Characters

  build-depends:       base ^>=4.13.0.0
                     , lens
                     , mtl
                     , transformers
                     , async
                     , managed
                     , text
                     , bytestring
                     , megaparsec
                     , filepath
                     , directory
                     , apecs
                     , apecs-physics
                     , linear
                     , sdl2
                     , sdl2-ttf
                     , sdl2-mixer
                     , template-haskell
                     , aeson
                     , hashable
                     , array
                     , vector
                     , unordered-containers

  default-extensions:  TypeApplications
                       ApplicativeDo
                       TypeFamilies
                       BangPatterns
                       StrictData
                       PackageImports
                       LambdaCase
                       DataKinds
                       PatternSynonyms
                       BlockArguments
                       RecordWildCards
                       OverloadedStrings
                       DerivingVia
                       DerivingStrategies
                       DeriveGeneric
                       DeriveAnyClass
                       DeriveFoldable
                       DeriveFunctor
                       DeriveTraversable
                       OverloadedLabels
                       GeneralizedNewtypeDeriving
                       ScopedTypeVariables

  other-extensions:    TemplateHaskell

  ghc-options:         -Wall -O2 -threaded -with-rtsopts=-N
  -- options for profiling
  -- ghc-options: -O2 -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"

  hs-source-dirs:      src
  default-language:    Haskell2010
